Add a canShutDown() method to KWorkSpace, and use it in KickOff to determine whether to show the shutdown options.

Note that we only check when KickOff is created, so changes to the session manager configuration will not take effect until logout (well, actually, you can just remove and add KickOff).

BUG: 165242


svn path=/trunk/KDE/kdebase/workspace/; revision=850182