ksmserver/server.h
@@ -187,6 +187,7 @@ private:
 
  public Q_SLOTS: //public dcop interface
     void logout( int, int, int );
+    bool canShutdown();
     QString currentSession();
     void saveCurrentSession();
     void saveCurrentSessionAs( const QString & );
